--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -33,7 +33,7 @@
     <string name="About">Acerca de</string>
     <string name="module_repo">Repositorio</string>
     <string name="module_repo_summary">Repositorio de módulos (alpha)</string>
-    <string name="about_view_source_code"><![CDATA[Ve el código fuente en %s<br/>Únete a nuestro %s canal]]></string>
+    <string name="about_view_source_code"><![CDATA[Ve el código fuente en %1$s<br/>Únete a nuestro %2$s canal]]></string>
     <string name="about_translators">Traductores: %s</string>
 
     <string name="activated">Activado</string>
@@ -57,7 +57,6 @@
     <string name="logs_save_failed">Fallo a la hora de guardar:</string>
     <string name="menuClearLog">Limpiar los registros</string>
     <string name="logs_cleared">Registros limpiados satisfactoriamente.</string>
-    <string name="log_is_empty">Los registros están vacíos.</string>
     <string name="scroll_top">Desplazar hasta el inicio</string>
     <string name="loading">Cargando…</string>
     <string name="scroll_bottom">Desplazar hasta el final</string>
@@ -113,7 +112,7 @@
     <string name="menu_show_games">Juegos</string>
     <string name="menu_show_modules">Módulos</string>
     <string name="failed_to_save_scope_list">Fallo al guardar la lista de scopes</string>
-    <string name="app_description">%s\nVersión %s</string>
+    <string name="app_description">%1$s\nVersión %2$s</string>
     <string name="use_recommended">Recomendado</string>
     <string name="no_scope_selected_has_recommended">No seleccionaste ninguna aplicación. ¿Quieres seleccionar las aplicaciones recomendadas?</string>
     <string name="use_recommended_message">¿Quieres seleccionar las aplicaciones recomendadas?</string>
