--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -33,7 +33,7 @@
     <string name="About">About</string>
     <string name="module_repo">저장소</string>
     <string name="module_repo_summary">모듈 저장소 (Alpha)</string>
-    <string name="about_view_source_code"><![CDATA[%s에서 소스 코드 보기<br/>%s 채널에 가입하십시오.]]></string>
+    <string name="about_view_source_code"><![CDATA[%1$s에서 소스 코드 보기<br/>%2$s 채널에 가입하십시오.]]></string>
     <string name="about_translators">번역가: %s</string>
     
     <string name="activated">활성화됨</string>
@@ -59,7 +59,6 @@
     <string name="logs_save_failed">저장 실패:</string>
     <string name="menuClearLog">로그 지우기</string>
     <string name="logs_cleared">로그를 성공적으로 지웠습니다.</string>
-    <string name="log_is_empty">로그가 비어 있습니다.</string>
     <string name="scroll_top">맨 위로 스크롤</string>
     <string name="loading">로딩 중…</string>
     <string name="scroll_bottom">아래로 스크롤</string>
@@ -116,7 +115,7 @@
     <string name="menu_show_games">게임</string>
     <string name="menu_show_modules">모듈</string>
     <string name="failed_to_save_scope_list">범위 목록 저장에 실패했습니다.</string>
-    <string name="app_description">%s\n버전 %s</string>
+    <string name="app_description">%1$s\n버전 %2$s</string>
     <string name="use_recommended">권장된</string>
     <string name="no_scope_selected_has_recommended">앱을 선택하지 않았습니다. 권장 앱을 선택하시겠습니까?</string>
     <string name="use_recommended_message">권장 앱을 선택하시겠습니까?</string>
@@ -134,7 +133,6 @@
     <string name="menu_filter">필터…</string>
 
     <!-- ModulesActivity and AppListActivity -->
-    <string name="modules_app_store">앱 스토어에서 보기</string>
     <string name="module_app_info">앱 정보</string>
 
     <!-- SettingsActivity -->
