--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -33,7 +33,7 @@
     <string name="About">Over</string>
     <string name="module_repo">Opslagplaats</string>
     <string name="module_repo_summary">Module opslagplaats (Alpha)</string>
-    <string name="about_view_source_code"><![CDATA[Bekijk de broncode op %s<br/>Sluit je aan bij onze %s kanaal]]></string>
+    <string name="about_view_source_code"><![CDATA[Bekijk de broncode op %1$s<br/>Sluit je aan bij onze %2%s kanaal]]></string>
     <string name="about_translators">Vertaler: %s</string>
 
     <string name="activated">Geactiveerd</string>
@@ -57,7 +57,6 @@
     <string name="logs_save_failed">Opslaan mislukt:</string>
     <string name="menuClearLog">Wis het logboek nu</string>
     <string name="logs_cleared">Log succesvol gewist.</string>
-    <string name="log_is_empty">Log is leeg.</string>
     <string name="scroll_top">Scroll naar boven</string>
     <string name="loading">Laden…</string>
     <string name="scroll_bottom">Scroll naar beneden</string>
@@ -108,7 +107,7 @@
     <string name="menu_show_games">Games</string>
     <string name="menu_show_modules">Modules</string>
     <string name="failed_to_save_scope_list">Scopelijst opslaan is mislukt</string>
-    <string name="app_description">%s\nVersie %s</string>
+    <string name="app_description">%1$s\nVersie %2$s</string>
     <string name="use_recommended">Aanbevolen</string>
     <string name="no_scope_selected_has_recommended">U heeft geen app geselecteerd. Aanbevolen apps selecteren?</string>
     <string name="use_recommended_message">Aanbevolen apps selecteren?</string>
@@ -125,7 +124,6 @@
     <string name="reboot">Herstart</string>
 
     <!-- ModulesActivity and AppListActivity -->
-    <string name="modules_app_store">Bekijk in App Store</string>
     <string name="module_app_info">App info</string>
 
     <!-- SettingsActivity -->
