--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="About">About</string>
     <string name="module_repo">Repository</string>
     <string name="module_repo_summary">Module repository (Alpha)</string>
-    <string name="about_view_source_code"><![CDATA[View source code at %s<br/>Join our %s channel]]></string>
+    <string name="about_view_source_code"><![CDATA[View source code at %1$s<br/>Join our %2$s channel]]></string>
     <string name="about_translators">Translators: %s</string>
 
     <string name="activated">Activated</string>
@@ -59,7 +59,6 @@
     <string name="logs_save_failed">Failed to save:</string>
     <string name="menuClearLog">Clear log now</string>
     <string name="logs_cleared">Log successfully cleared.</string>
-    <string name="log_is_empty">Log is empty.</string>
     <string name="scroll_top">Scroll to top</string>
     <string name="loading">Loading…</string>
     <string name="scroll_bottom">Scroll to bottom</string>
@@ -115,7 +114,7 @@
     <string name="menu_show_games">Games</string>
     <string name="menu_show_modules">Modules</string>
     <string name="failed_to_save_scope_list">Failed save scope list</string>
-    <string name="app_description">%s\nVersion %s</string>
+    <string name="app_description">%1$s\nVersion %2$s</string>
     <string name="use_recommended">Recommended</string>
     <string name="no_scope_selected_has_recommended">You did not select any app. Select recommended apps?</string>
     <string name="use_recommended_message">Select recommended apps?</string>
