--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -33,7 +33,7 @@
     <string name="About">關於</string>
     <string name="module_repo">倉庫</string>
     <string name="module_repo_summary">模組倉庫（Alpha）</string>
-    <string name="about_view_source_code"><![CDATA[在 %s 檢視原始碼<br/>加入我們的 %s 頻道]]></string>
+    <string name="about_view_source_code"><![CDATA[在 %1$s 檢視原始碼<br/>加入我們的 %2$s 頻道]]></string>
     <string name="about_translators">翻譯者：%s</string>
 
     <string name="activated">已啟用</string>
