[app] Show user name (#688)

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -86,11 +86,11 @@
     <string name="module_uninstall_message">Voulez-vous installer ce module?</string>
     <string name="module_uninstalled">Désinstallation de %1$s</string>
     <string name="module_uninstall_failed">Échec de la désinstallation</string>
-    <string name="module_installed">Ajout de %1$s à l’utilisateur %2$d</string>
+    <string name="module_installed">Ajout de %1$s à l’utilisateur %2$s</string>
     <string name="module_install_failed">Échec de l\’ajout du module</string>
     <string name="user_title">Utilisateur %d</string>
-    <string name="install_to_user">Installation dans utilisateur %d</string>
-    <string name="install_to_user_message">Vous voulez installer %1$s dans l’utilisateur %2$d? Il est recommandé de l’installer manuellement, fercer l’installation via LSPosed pourrait causer des problèmes.</string>
+    <string name="install_to_user">Installation dans utilisateur %s</string>
+    <string name="install_to_user_message">Vous voulez installer %1$s dans l’utilisateur %2$s? Il est recommandé de l’installer manuellement, fercer l’installation via LSPosed pourrait causer des problèmes.</string>
 
     <!-- AppListActivity -->
     <string name="compile_speed">Ré-optimiser</string>
