--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -86,11 +86,11 @@
     <string name="module_uninstall_message">Você quer desinstalar este módulo?</string>
     <string name="module_uninstalled">Desinstalado %1$s</string>
     <string name="module_uninstall_failed">Falha ao desinstalar</string>
-    <string name="module_installed">Adicionado %1$s ao usuário %2$d</string>
+    <string name="module_installed">Adicionado %1$s ao usuário %2$s</string>
     <string name="module_install_failed">Falha ao adicinar módulo</string>
     <string name="user_title">Usuário %d</string>
-    <string name="install_to_user">Instalar ao usuário %d</string>
-    <string name="install_to_user_message">Deseja instalar %1$s ao usuário %2$d? Recomenda-se instalar manualmente, forçar a instalação via LSPosed pode causar problemas.</string>
+    <string name="install_to_user">Instalar ao usuário %s</string>
+    <string name="install_to_user_message">Deseja instalar %1$s ao usuário %2$s? Recomenda-se instalar manualmente, forçar a instalação via LSPosed pode causar problemas.</string>
 
     <!-- AppListActivity -->
     <string name="compile_speed">Re-otimizar</string>
