--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -85,9 +85,9 @@
     <string name="module_uninstalled">Desinstalado %1$s</string>
     <string name="module_uninstall_failed">Fallo en la desinstalación</string>
     <string name="user_title">Usuario %d</string>
-    <string name="install_to_user">Instalar al usuario %d</string>
-    <string name="install_to_user_message">¿Quieres instalar %1$s al usuario %2$d? Se recomienda que lo instales manualmente; forzar la instalación a través de LSPosed puede causar problemas.</string>
-    <string name="module_installed">%1$s instalado %2$d</string>
+    <string name="install_to_user">Instalar al usuario %s</string>
+    <string name="install_to_user_message">¿Quieres instalar %1$s al usuario %2$s? Se recomienda que lo instales manualmente; forzar la instalación a través de LSPosed puede causar problemas.</string>
+    <string name="module_installed">%1$s instalado %2$s</string>
     <string name="module_install_failed">Fallo en la instalación</string>
 
     <!-- AppListActivity -->
