--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -32,7 +32,7 @@
     <string name="Settings">Configuración</string>
     <string name="About">Acerca de</string>
     <string name="module_repo">Repositorio</string>
-    <string name="module_repo_summary">Repositorio de módulos (alpha)</string>
+    <string name="module_repo_summary">Repositorio de módulos (Beta)</string>
     <string name="about_view_source_code"><![CDATA[Ve el código fuente en %1$s<br/>Únete a nuestro %2$s canal]]></string>
     <string name="about_translators">Traductores: %s</string>
 
