--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -32,7 +32,7 @@
     <string name="Settings">Réglages</string>
     <string name="About">A propos</string>
     <string name="module_repo">Dépôt</string>
-    <string name="module_repo_summary">Dépôts de modules (Alpha)</string>
+    <string name="module_repo_summary">Dépôts de modules (Beta)</string>
     <string name="about_view_source_code"><![CDATA[Voir le code source sur %1$s<br/>Rejoindre notre canal %2$s]]></string>
     <string name="about_translators">Traducteur: %s</string>
 
