--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -32,7 +32,7 @@
     <string name="Settings">Impostazioni</string>
     <string name="About">Informazioni</string>
     <string name="module_repo">Repository</string>
-    <string name="module_repo_summary">Repository moduli (Alpha)</string>
+    <string name="module_repo_summary">Repository moduli (Beta)</string>
     <string name="about_view_source_code"><![CDATA[Visualizza il codice sorgente su %1$s<br/>Unisciti al nostro canale %2$s]]></string>
     <string name="about_translators">Traduttori: %s</string>
 
