--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -32,7 +32,7 @@
     <string name="Settings">설정</string>
     <string name="About">About</string>
     <string name="module_repo">저장소</string>
-    <string name="module_repo_summary">모듈 저장소 (Alpha)</string>
+    <string name="module_repo_summary">모듈 저장소 (Beta)</string>
     <string name="about_view_source_code"><![CDATA[%1$s에서 소스 코드 보기<br/>%2$s 채널에 가입하십시오.]]></string>
     <string name="about_translators">번역가: %s</string>
 
