--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -32,7 +32,7 @@
     <string name="Settings">Instellingen</string>
     <string name="About">Over</string>
     <string name="module_repo">Opslagplaats</string>
-    <string name="module_repo_summary">Module opslagplaats (Alpha)</string>
+    <string name="module_repo_summary">Module opslagplaats (Beta)</string>
     <string name="about_view_source_code"><![CDATA[Bekijk de broncode op %1$s<br/>Sluit je aan bij onze %2$s kanaal]]></string>
     <string name="about_translators">Vertaler: %1$s</string>
 
