--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -32,7 +32,7 @@
     <string name="Settings">Configurações</string>
     <string name="About">Sobre</string>
     <string name="module_repo">Repositório</string>
-    <string name="module_repo_summary">Repositório de Módulos (Alpha)</string>
+    <string name="module_repo_summary">Repositório de Módulos (Beta)</string>
     <string name="about_view_source_code"><![CDATA[Veja o código fonte no %1$s<br/>Entre em nosso canal no %2$s]]></string>
     <string name="about_translators">Tradutor: %s</string>
 
