--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -39,10 +39,14 @@
     <string name="activated">Activé</string>
     <string name="not_installed">Non installé</string>
     <string name="partial_activated">Partiellement activé</string>
+    <string name="need_update">Mise à jour nécessaire</string>
     <string name="selinux_policy_not_loaded_summary">SEPolicy n\’est pas chargé correctement</string>
     <string name="selinux_policy_not_loaded">&lt;b&gt;AVERTISSEMENT:&lt;\/b&gt; SEPolicy n\’est pas chargé correctement, les modules qui modifient le sous-système ne fonctionneront pas.</string>
     <string name="system_inject_fail_summary">Échec de l\’injection du sous système</string>
     <string name="system_inject_fail"><![CDATA[<b>AVERTISSEMENT:</b> Échec de l\’injection du sous système.<br/>Ceci est rare et peut être causé par <b>Magisk</b> ou certains modules Magisk de basse qualité.<br/>Éssayez de désactiver les modules Magisk autres que Riru et LSPosed ou envoyez le journal complet aux développeurs.]]></string>
+    <string name="system_prop_incorrect_summary">Propriétés système incorrectes</string>
+    <string name="system_prop_incorrect"><![CDATA[<b>AVERTISSEMENT:</b> Propriétés système incorrectes.<br/>Certaines propriétés nécessaires au système ont été supprimées ou modifiées.<br/>Les modules peuvent s\'invalider occasionnellement.]]></string>
+    <string name="please_update_summary">Merci d\’installer la dernière version de LSPosed</string>
     <string name="info_api_version">Version de l\’API</string>
     <string name="info_framework_version">Version du framework</string>
     <string name="info_manager_version">Version du gestionnaire</string>
@@ -118,6 +122,7 @@
     <string name="no_scope_selected_has_recommended">Vous n\’avez sélectionné aucune application. Sélectionner les applications recommandées?</string>
     <string name="use_recommended_message">Sélectionner les applications recommandées?</string>
     <string name="requested_by_module">Recommendé</string>
+    <string name="update_available">Mise à jour disponible: %1$s</string>
     <string name="module_disabled_no_selection">Le module %s à été désactivé étant donné qu\’aucune application n\’a été sélectionné.</string>
     <string name="android_framework">Cadre du sous-système</string>
     <string name="menu_backup_and_restore">Sauvegarde…</string>
@@ -128,6 +133,7 @@
     <string name="force_stop_dlg_text">Si vous forcez l\’arrêt d\’une application, elle peut mal se comporter.</string>
     <string name="reboot_required">Redémarrage requis pour les changements prennent effet</string>
     <string name="reboot">Redémarrage</string>
+    <string name="menu_hide">Masquage…</string>
 
     <!-- ModulesActivity and AppListActivity -->
     <string name="modules_other_app">Voir dans une autre application</string>
